--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -18,12 +18,6 @@
       <li class="work-tag">Prototyping</li>
     </ul>
     <div class="work-description">
-      <!-- <p>
-        In September 2017, I formed a group with three other graduate students to design a user-centered solution to address problems for homeless residents of Seattle.
-      </p>
-      <p>
-        My role spanned lorem ipsum dolor sit amet.
-      </p> -->
     </div>
   </header>
 
@@ -32,32 +26,19 @@
       Opportunity Space and Scope
     </h2>
     <p>
-      Our opportunity space was initialy broad: we wanted to look at problems for homelessness residents of Seattle. In order to narrow our scope, we began a literature review and reached out to experts for interviews.
+      Our opportunity space was initially broad: we wanted to look at problems for homeless residents of Seattle. To narrow our scope, we began a literature review and reached out to experts for interviews.
     </p>
     <ul class="work-body-list">
       <li>
-        We read dozens of investigative reports and created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">notes like this one</a>, organizing opportunities that we could further investigate.
+        We read dozens of investigative reports and created <a class="work-body-link" target="_blank" href="https://www.evernote.com/shard/s55/sh/399d9d7c-0076-4bc3-8724-f5059f4f0e54/75be081166e1709a">notes like this one</a>, organizing opportunities that we could investigate.
       </li>
       <li>
-        We reached out to experts. I began a conversation with <a class="work-body-link" target="_blank" href="https://en.wikipedia.org/wiki/Barbara_Poppe">Barbara Poppe</a>, an Obama appointee to the U.S. Interagency Council on Homelessness. She helped validate our initial trajectory.
-      </li>
-      <li>
-        Our lit review and semi-structured interviews helped us understand how a narrow scope could help us achieve tangible results.
+        I discussed our project planning and our focus on storage with Barbara Poppe, an appointee by President Obama to the U.S. Interagency Council on Homelessness. She helped validate our trajectory.
       </li>
     </ul>
-  </section>
-
-  <section class="work-section">
-    <h3 class="work-body-h3">
-      Why focus on storage solutions?
-    </h3>
     <p>
-      We decided to focus on designing storage solutions because this space was small enough in scope for us to explore, but large enough that it could provide real benefits to many users:
+      This early research helped us understand how a narrow scope would help us achieve tangible results. Storage was small enough in scope for us to explore, but was something our research indicated was a significant problem for many Seattle residents experiencing homelessness.
     </p>
-    <ul class="work-body-list">
-      <li>With their possessions safe, shelter residents could travel more freely without worrying about loss prevention</li>
-      <li>This would offer many practical and emotional benefits, and enable easier access to social services and employment opportunities</li>
-    </ul>
   </section>
 
   <section class="work-section">
@@ -65,30 +46,23 @@
       Understanding the Domain
     </h2>
     <p>
-      To better understand our place in this domain, we first sought to define what audiences were involved and what resource constraints we would face.
+      We first wanted to define what audiences were involved and what resource constraints we would face. Seattle presents many distinct populations of homeless residents who are relying on a variety of housing programs for support. Beyond existing housing programs, we also wanted to understand the financial resources that the city puts towards homelessness.
     </p>
-    <h3 class="work-body-h3">
-      Types of Homeless Housing Projects
-    </h3>
+    <div class="work-body-image-grid">
+      <app-image-viewer
+        path="../assets/images/work/uw-secure-storage/homeless-housing-programs.png"
+        description="The four types of homeless housing programs in Seattle"
+        [borderOn]="true">
+      </app-image-viewer>
+      <app-image-viewer
+        path="../assets/images/work/uw-secure-storage/homelessness-budgets.jpeg"
+        description="The homelessness spending budget in Seattle"
+        [borderOn]="true">
+      </app-image-viewer>
+    </div>
     <p>
-      Seattle presents many distinct populations of homeless residents who are relying on a variety of housing programs for support. These housing programs differ across the types of shelter, staff support, amenities, and other factors of care provided. A single solution may not work for each type of shelter.
+      Housing programs differ in many ways. A single solution may not work for each type of shelter. And the budgetary resources here are scarce.
     </p>
-    <app-image-viewer
-      path="../assets/images/work/uw-secure-storage/homeless-housing-programs.png"
-      description="The four types of homeless housing programs in Seattle"
-      [borderOn]="true">
-    </app-image-viewer>
-    <h3 class="work-body-h3">
-      Financial Resources Available
-    </h3>
-    <p>
-      Beyond existing housing programs, we also wanted to understand the financial resources that the city puts towards homelessness. We investigated how budgetary resources are organized in Seattle. The resources here, like in many cities, are scarce.
-    </p>
-    <app-image-viewer
-      path="../assets/images/work/uw-secure-storage/homelessness-budgets.jpeg"
-      description="The homelessness spending budget in Seattle"
-      [borderOn]="true">
-    </app-image-viewer>
   </section>
 
   <section class="work-section">
@@ -96,7 +70,7 @@
       Putting Housing First
     </h3>
     <p>
-      Through literature review and semi-structured interviews, we came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming majority of city funds should be put towards the creation of permanent housing solutions rather than stop-gap measures.
+      Through literature review and semi-structured interviews, we came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming effort of the city should be to create robust permanent housing solutions for all, rather than stop-gap measures.
     </p>
     <p>
       As we progressed, we often asked ourselves, "is this solution worth more than a single permanent home?" Prioritizing "housing first," we knew our solution would have to use resources responsibly &mdash; either through a low cost or through an easy method of scaling the resources required.
