--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -70,7 +70,7 @@
       Putting Housing First
     </h3>
     <p>
-      Through literature review and semi-structured interviews, we came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming effort of the city should be to create robust permanent housing solutions for all, rather than stop-gap measures.
+      We came to align ourselves with a budgetary concept of <a class="work-body-link" target="_blank" href="https://www.desc.org/what-we-do/housing/housing-first/">housing first</a> &mdash; the idea that the overwhelming effort of the city should be to create robust permanent housing solutions for all, rather than stop-gap measures.
     </p>
     <p>
       As we progressed, we often asked ourselves, "is this solution worth more than a single permanent home?" Prioritizing "housing first," we knew our solution would have to use resources responsibly &mdash; either through a low cost or through an easy method of scaling the resources required.
@@ -82,7 +82,7 @@
       Competitive Analysis
     </h2>
     <p>
-      We found that many existing solutions didn't account for the range of housing programs that exist. They frequently employed costly materials or failed to align with the resource scarcity of the system.
+      We found that many existing solutions didn't account for the range of housing programs that exist. They frequently used costly materials or had trouble scaling.
     </p>
     <div class="work-body-image-grid">
       <app-image-viewer
@@ -95,10 +95,7 @@
       </app-image-viewer>
     </div>
     <p>
-      The H.O.P.E. lockers, shown above, cost $10,000 each to build. Another storage pilot program in Denver, shown below, cost $100,000 to initiate, and included a high upkeep cost each month onward.
-    </p>
-    <p>
-      Based on the narrow scope of existing solutions, we saw an opportunity for a cheaper, more sustainable, community-oriented system.
+      The H.O.P.E. lockers, shown above, cost $10,000 each to build. Another storage pilot program in Denver, shown below, cost $100,000 to initiate, and included a high upkeep cost each month onward. Based on these problems with existing solutions, we saw an opportunity for a cheaper, more sustainable, community-oriented system.
     </p>
   </section>
 
@@ -128,7 +125,7 @@
       <li>What storage size do you require?</li>
     </ul>
     <p>
-      In addition to the above questions, we also asked a number of questions about the level of trust within the community, the logistics and operations, and how communication is handled between residents in different scenarios.
+      We also asked questions about the level of trust within the community, the logistics and operations, and how communication is handled between residents in different scenarios.
     </p>
   </section>
 
@@ -137,7 +134,7 @@
       Visiting and Interviewing
     </h2>
     <p>
-      Our group had a particular interest in Seattle's tent cities. These communities are transitional, highly vulnerable, and have been contentious in Seattle housing discussions. To gain an understanding of the needs of residents of transitional housing, we visited Nickelsville Ballard to transect-walk and interview.
+      Our group was also interested in solutions that helped Seattle's tent cities. These communities are transitional, vulnerable, and have been contentious in housing discussions. To gain an understanding of the needs of residents of transitional housing, we visited Nickelsville Ballard to transect-walk and interview.
     </p>
     <app-image-viewer
       [images]="nickelsvilleImages"
@@ -150,7 +147,7 @@
     </p>
     <ul class="work-body-list">
       <li>
-        Residents have significant needs for privacy, which extends to their storage.
+        Residents have various needs for privacy, which extend to their storage.
       </li>
       <li>
         Transitional communities must be able to move on short notice due to raids or other relocation needs. Residents must be able to bring both their goods and the means to store them.
@@ -159,14 +156,14 @@
         Our guide reiterated what our surveys found &mdash; residents have a lot of possessions, often over 500 or 1000 liters.
       </li>
       <li>
-        There is often room for more storage, but no structure to house goods.
+        There is often room at a site for more storage, but no structure to house goods.
       </li>
     </ul>
     <h3 class="work-body-h3">
       Early Design Ideas from the Field
     </h3>
     <p>
-      One of my design ideas came from this field visit &mdash; from seeing the kind of structural supports depicted in the last three picture above. Many of the structures in the Nickelsville Ballard camp were fabricated from a mix of skeletal supports (the kind of plastic, PVC type material shown), and a simple waterproof exoskeleton, like a standard tarp. I knew I wanted to explore this kind of structural, component-based system more.
+      One of my design ideas came from the visit &mdash; from seeing structural supports like the ones in the last three picture. Many of the structures in the Nickelsville Ballard camp were made from a mix of materials (wood, plastic, PVC), and a simple waterproof shell, like a tarp. I knew I wanted to explore a structural, component-based system more.
     </p>
   </section>
 
