update work directives and headers

--- a/src/app/work/work-frame/work-frame.component.html
+++ b/src/app/work/work-frame/work-frame.component.html
@@ -1,4 +1,4 @@
-<section class="work-details">
+<section class="work-frame">
   <header class="subject-header">
     <div class="heading">
       Work
