--- a/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
+++ b/src/app/work/work-items/crowdskout-data-viz/crowdskout-data-viz.component.html
@@ -1,27 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Simplifying Data Visualization
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Developing an intuitive system for data visualization in Crowdskout
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">JavaScript</li>
-      <li class="work-tag">AngularJS</li>
-      <li class="work-tag">D3.js</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        I joined Crowdskout in 2015 with a directive to overhaul Crowdskout's data visualization system. Working with a team of engineers, I researched and built the foundations of the system. The system was designed so that a novice user could quickly learn and operate it to design and deliver complex visualizations without any training.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      I joined Crowdskout in 2015 with a directive to overhaul Crowdskout's data visualization system. Working with a team of engineers, I researched and built the foundations of the system. The system was designed so that a novice user could quickly learn and operate it to design and deliver complex visualizations without dedicated training.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
