--- a/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
+++ b/src/app/work/work-items/crowdskout-datetime/crowdskout-datetime.component.html
@@ -1,27 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Revamping Date & Time Selections
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Developing a modular way to manipulate date & datetime selections in Crowdskout
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">JavaScript</li>
-      <li class="work-tag">AngularJS</li>
-      <li class="work-tag">Moment.js</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        As we grew the Crowdskout app to support more complex time-series graphs and other date & time dependent inputs, we encountered a need to overhaul our date & time UI and data treatment. I led the effort to overhaul our date & time management.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      As we grew the Crowdskout app to support more complex time-series graphs and other date & time dependent inputs, we encountered a need to overhaul our date & time UI and data treatment. I researched the ISO spec and developed a new interface to handle these selections.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
