--- a/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
+++ b/src/app/work/work-items/crowdskout-form-editor/crowdskout-form-editor.component.html
@@ -1,26 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        A System for Interactive Forms
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Enabling users to create, manage, and interpret data from surveys & forms using a variety of designs and conditions
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">JavaScript</li>
-      <li class="work-tag">AngularJS</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        One way that Crowdskout users can interact with their profiles is to deliver rich surveys and forms for a variety of circumstances. I overhauled the form system in 2015 and 2016, and added a system for conditionally branching questions to facilitate rich survey creation.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      One way that Crowdskout users can interact with their profiles is to deliver surveys and forms for a variety of circumstances. I overhauled the form system in 2015 and 2016, and added a system for conditionally branching questions to facilitate rich survey creation entirely within the Crowdskout platform.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
