--- a/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
+++ b/src/app/work/work-items/crowdskout-segmenting/crowdskout-segmenting.component.html
@@ -1,26 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Segmenting Audiences Effectively
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Overhauling the interface for audience segmentation in Crowdskout
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Front-End Engineering</li>
-      <li class="work-tag">JavaScript</li>
-      <li class="work-tag">AngularJS</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        Audience segmentation is at the heart of Crowdskout's data analytics system. In 2016, after the segmentation tool grew in complexity, we overhauled the interface to this critical tool to better support the new capabilities it offered.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      Audience segmentation is at the heart of Crowdskout's data analytics system. In 2016, after the segmentation tool grew in complexity, we overhauled the interface to this critical tool to better support the new capabilities it offered.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
