--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -1,30 +1,13 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Collaborative Research with the IFRC
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Understanding a complex humanitarian system, and planning a human-centered intervention to improve vulnerability assessments
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">UX Research</li>
-      <li class="work-tag">Research Planning</li>
-      <li class="work-tag">Literature Review</li>
-      <li class="work-tag">Semi-Structured Interviews</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my class studying Complex Systems was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
-      </p>
-      <p>
-        The IFRC has been a leader in the development and application of participatory design systems, and the VCA system is just one such example. As experts on the meeting points of technology and human-centered research & design, we collaborated with many Red Cross teams to layout distinct opportunities to better integrate new technology into their participatory VCA approach.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my class studying Complex Systems was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
+    </p>
+    <p>
+      The IFRC has been a leader in the development and application of participatory design systems, and the VCA system is one such example. As experts on the meeting points of technology and human-centered research & design, we collaborated with many Red Cross teams to layout distinct opportunities to better integrate new technology into their participatory VCA approach.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
