--- a/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
+++ b/src/app/work/work-items/uw-oculus-onboarding/uw-oculus-onboarding.component.html
@@ -1,31 +1,13 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        On-boarding with the Oculus Platform
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Conducting a usability test to evaluate first-time user experiences with Oculus Touch and motion-controlled software
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">UX Research</li>
-      <li class="work-tag">Research Planning</li>
-      <li class="work-tag">Usability Testing</li>
-      <li class="work-tag">Qualitative Research</li>
-      <li class="work-tag">Quantitative Research</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        In January 2018, I formed a group with three other graduate students to develop and conduct a usability test. We were interested in testing a product with a complex, novel interface &mdash; something that presented different questions and opportunities than traditional web applications.
-      </p>
-      <p>
-        We decided to work with VR, using the Oculus platform. We were interested in understanding how first-time users would grapple with this new interface &mdash; what hurdles they would identify during on-boarding, and how they would adapt and operate a software interface with no prior experience.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      We worked with the Oculus platform to understand how first-time users would grapple with a VR interface: what hurdles would they identify during on-boarding, and how would they operate and adapt to to an interface with no prior experience?
+    </p>
+    <p>
+       We found that on-boarding experiences were critical &mdash; both to the VR platform and to individual applications. Tutorial experiences should also be replayable, accessible, and navigable.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
