--- a/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
+++ b/src/app/work/work-items/uw-secure-storage/uw-secure-storage.component.html
@@ -1,25 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Secure Storage for Tent Cities
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Designing a user-centered solution to help homeless Seattle residents store their possessions securely and sustainably
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">UX Research</li>
-      <li class="work-tag">Research Planning</li>
-      <li class="work-tag">Information Architecture</li>
-      <li class="work-tag">Wireframing</li>
-      <li class="work-tag">Prototyping</li>
-    </ul>
-    <div class="work-description">
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      I worked with a team to design a way to help homeless Seattle residents store their possessions securely and sustainably. We researched the problem area and prototyped a system that offered a library of storage structures and instructions to build them using commonly available materials.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
