--- a/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
+++ b/src/app/work/work-items/vox-global-att-csr/vox-global-att-csr.component.html
@@ -1,29 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Redesigning AT&T CSR's Brand & Website
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Revamping the way AT&T presents their brand and uses storytelling to share their corporate & social responsibility campaigns
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Creative Strategy</li>
-      <li class="work-tag">Client Management</li>
-      <li class="work-tag">Pitch & Concept Development</li>
-      <li class="work-tag">Branding</li>
-      <li class="work-tag">Creative Direction</li>
-      <li class="work-tag">Web Design</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        From 2014-2015, I worked with AT&T to redesign their CSR brand and reconsider the way they use blogging and social media to share their stories. This was a project that I helped lead with our creative and engineering directors.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      From 2014-2015, I worked with AT&T to redesign their CSR brand and reconsider the way they use blogging and social media to share their stories.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
