--- a/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
+++ b/src/app/work/work-items/vox-global-brand-redesign/vox-global-brand-redesign.component.html
@@ -1,28 +1,10 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Internal Rebrand for an Ad Agency
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Working with internal stakeholders to research and redesign VOX Global's brand and web presence
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">Branding</li>
-      <li class="work-tag">Semi-structured Interviews</li>
-      <li class="work-tag">Focus Groups</li>
-      <li class="work-tag">Language & Tone</li>
-      <li class="work-tag">Visual Design</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        Over the course of 2015, I helped lead an effort to rebrand VOX Global &mdash; a DC-based communications firm &mdash; updating the language, architecture, visual design, and web presence the company used to present itself.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      Over the course of 2015, I helped lead an effort to rebrand VOX Global &mdash; a DC-based communications firm &mdash; updating the language, architecture, visual design, and web presence the company used to present itself.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
