--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -8,8 +8,9 @@ body {
 }
 
 /* Define custom fonts */
-$work-body-font: 'Source Sans Pro', 'Arial', sans-serif;
-$work-heading-font: 'Georgia', serif;
+$body-font: 'Source Sans Pro', 'Arial', sans-serif;
+$heading-font: 'Georgia', serif;
+$mini-heading-font: 'Rubik', 'Arial', sans-serif;
 
 // Font size
 $hugest: 2.375rem;
