--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -8,7 +8,7 @@ $shift-nav-to-side: 'mediumer';
 
 .about-content,
 .work-content,
-.work-details,
+.work-frame,
 .writing-content {
   padding: 2.5em 2em;
   max-width: 56em;
