--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,11 @@
 // Text
 $lightest-gray: $white-smoke;
+$mid-gray: $wild-sand;
 $light-gray: $dove-gray;
 $dark-gray: $obsidian;
 $darkest-gray: $nero;
 $accent-red: $elder-salmon;
+
 
 // Nav
 $nav-link: $obsidian;
