--- a/src/app/work/work-items/uw-yarn/uw-yarn.component.html
+++ b/src/app/work/work-items/uw-yarn/uw-yarn.component.html
@@ -1,39 +1,21 @@
 <article class="work-entry">
 
-  <header class="work-header">
-    <section class="work-titling">
-      <h1 class="work-title">
-        Structured Supports for Storytelling
-      </h1>
-      <div class="work-title-border"></div>
-      <div class="work-subtitle">
-        Researching how narrative can enhance data-driven stories of accomplishment to improve social feedback
-      </div>
-    </section>
-    <ul class="work-tags">
-      <li class="work-tag">UX Research</li>
-      <li class="work-tag">Research Planning</li>
-      <li class="work-tag">Semi-structured Interviews</li>
-      <li class="work-tag">Participant Cohorts</li>
-      <li class="work-tag">Qualitative Research</li>
-    </ul>
-    <div class="work-description">
-      <p>
-        Over the course of six months from 2017-2018, I worked with a Directed Research Group in HCDE to help run a long-term evaluation of Yarn &mdash; a research iOS app for writing stories of accomplishment through personal data like running data, photos, videos, and text.
-      </p>
-      <p>
-        Yarn uses a structured writing experience to help people create content which aligns with their goals for sharing that others would find interesting. Yarn was specifically designed to support two types of stories of personal accomplishment: training for a running race or working on Do-It-Yourself projects.
-      </p>
-      <p>
-        I helped to recruit, interview, and manage a cohort of 15 participants who used the app for four weeks each. Throughout the study, we conducted weekly surveys as well as pre- and post-study semi-structured interviews. At the end of the study, I helped to analyze and synthesize the data. Our findings are under submission to CHI Proceedings in 2018.
-      </p>
-    </div>
-  </header>
+  <app-work-header>
+    <p>
+      I worked with a Directed Research Group in HCDE to help run a long-term evaluation of Yarn &mdash; a research iOS app for writing stories of accomplishment through personal data like running data, photos, videos, and text.
+    </p>
+    <p>
+      I helped to recruit, interview, and manage a cohort of 15 participants who used the app for four weeks each. Throughout the study, we conducted weekly surveys as well as pre- and post-study semi-structured interviews. At the end of the study, I helped to analyze and synthesize the data. Our findings are under submission to the 21st ACM Conference on Computer-Supported Cooperative Work and Social Computing in 2018.
+    </p>
+  </app-work-header>
 
   <section class="work-section">
     <h2 class="work-body-h2">
       Understanding the Research and the App
     </h2>
+    <p>
+      Yarn uses a structured writing experience to help people create content which aligns with their goals for sharing that others would find interesting. Yarn was specifically designed to support two types of stories of personal accomplishment: training for a running race or working on Do-It-Yourself projects.
+    </p>
     <p>
       At the outset of our project, the design of the Yarn application was complete, but we had to organize and run its usability study. I joined a team with three other students to help run the study and analyze our findings.
     </p>
