--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -1,6 +1,6 @@
 .work-section {
   max-width: 40em;
-  font-family: $work-body-font;
+  font-family: $body-font;
   font-size: $normaler;
   color: $dark-gray;
   line-height: 1.6em;
@@ -62,7 +62,7 @@
 .work-body-h2 {
   display: inline-block;
   position: relative;
-  font-family: $work-heading-font;
+  font-family: $heading-font;
   font-size: $prettybig;
   font-weight: bold;
   color: $darkest-gray;
@@ -81,7 +81,7 @@
 .work-body-h3 {
   display: inline-block;
   position: relative;
-  font-family: $work-heading-font;
+  font-family: $heading-font;
   font-size: $normaler;
   font-weight: bold;
   color: $darkest-gray;
