--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 // External
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Rubik');
 
 $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 
@@ -29,5 +30,5 @@ $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 @import './dashboard';
 @import './about';
 @import './work-list';
-@import './work-details';
+@import './work-frame';
 @import './writing';
