update styles and interface; cleanup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,7 @@
 <article class="about-content">
 
   <app-article-header
+    class="desktop-only"
     header="About"
     subheader="Bio and contact information">
   </app-article-header>
