--- a/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
+++ b/src/app/work/work-items/uw-complex-systems/uw-complex-systems.component.html
@@ -2,10 +2,10 @@
 
   <app-work-header>
     <p>
-      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my class studying Complex Systems was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
+      Through a unique partnership between the <a class="work-body-link" target="_blank" href="https://media.ifrc.org/">International Federation of Red Cross and Red Crescent Societies (IFRC)</a> and the University of Washington, my class studying complex systems was able to collaboratively research ways to incorporate Human-Centered principles into the <a class="work-body-link" target="_blank" href="http://www.ifrc.org/vca">Vulnerability & Capacity Assessment (VCA)</a> system.
     </p>
     <p>
-      The IFRC has been a leader in the development and application of participatory design systems, and the VCA system is one such example. As experts on the meeting points of technology and human-centered research & design, we collaborated with many Red Cross teams to layout distinct opportunities to better integrate new technology into their participatory VCA approach.
+      The IFRC uses a participatory design model for its community programs like the VCA. As experts on the meeting points of technology and human-centered research & design, we collaborated with Red Cross teams to layout opportunities to better integrate technology into their participatory VCA approach.
     </p>
   </app-work-header>
 
