--- a/src/app/work/work-items/uw-yarn/uw-yarn.component.html
+++ b/src/app/work/work-items/uw-yarn/uw-yarn.component.html
@@ -5,7 +5,7 @@
       I worked with a Directed Research Group in HCDE to help run a long-term evaluation of Yarn &mdash; a research iOS app for writing stories of accomplishment through personal data like running data, photos, videos, and text.
     </p>
     <p>
-      I helped to recruit, interview, and manage a cohort of 15 participants who used the app for four weeks each. Throughout the study, we conducted weekly surveys as well as pre- and post-study semi-structured interviews. At the end of the study, I helped to analyze and synthesize the data. Our findings are under submission to the 21st ACM Conference on Computer-Supported Cooperative Work and Social Computing in 2018.
+      I helped recruit, interview, and manage a cohort of 15 participants who used the app for four weeks each. Throughout the study, we conducted weekly surveys as well as pre- and post-study semi-structured interviews. At the end of the study, I helped analyze and synthesize the data. Our findings are under submission to the 21st ACM Conference on Computer-Supported Cooperative Work and Social Computing in 2018.
     </p>
   </app-work-header>
 
