--- a/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
+++ b/src/app/work/work-items/vox-global-motion-design/vox-global-motion-design.component.html
@@ -2,7 +2,7 @@
 
   <app-work-header>
     <p>
-      I ran the video and animation practice group for VOX Global. This was like an agency within the agency - I managed clients and produced live action and motion-designed videos for a range of applications.
+      I ran the video and animation practice for VOX Global. I managed clients and produced live action and motion-designed videos for a range of applications.
     </p>
   </app-work-header>
 
