--- a/src/app/work/work-list/work-list.component.html
+++ b/src/app/work/work-list/work-list.component.html
@@ -1,5 +1,6 @@
 <article class="work-content">
   <app-article-header
+    class="desktop-only"
     header="Work"
     subheader="Projects with clients, companies, and schools">
   </app-article-header>
