--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -18,7 +18,9 @@ $huge: 2.125rem;
 $prettybig: 1.75rem;
 $hugeish: 1.5rem;
 $largest: 1.375rem;
-$large: 1.25rem;
-$normaler: 1.125rem;
+$larger: 1.25rem;
+$large: 1.125rem;
+$normalarge: 1.05rem;
 $normal: 1rem;
 $small: 0.875rem;
+$smaller: 0.75rem;
