--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -21,11 +21,11 @@
 .contact-heading {
   color: $mid-gray;
   font-family: $mini-heading-font;
-  font-size: $small;
+  font-size: $smaller;
   font-weight: 400;
   text-transform: uppercase;
   margin: 1.4em 0 1em 0;
-  letter-spacing: 0.1em;
+  letter-spacing: 0.2em;
   font-weight: bold;
 }
 
@@ -49,7 +49,7 @@
   p {
     color: $dark-gray;
     font-family: $body-font;
-    font-size: $large;
+    font-size: $larger;
     line-height: 1.4em;
     padding-bottom: 1em;
   }
