update contact links

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,35 +7,8 @@
   </app-article-header>
 
   <section class="about-main">
-
     <div class="secondary-content">
-      <img
-        class="self-image"
-        src="../assets/images/about/self-image.jpg"
-        alt="peter-cutler">
-      <div class="contact-group">
-        <h2 class="contact-heading">Contact</h2>
-        <div class="contact-row">
-          <a
-            class="contact-link"
-            target="_blank"
-            href="mailto:petergcutler@gmail.com">
-            Email
-          </a>
-        </div>
-        <div class="contact-row">
-          <a
-            class="contact-link"
-            target="_blank"
-            href="https://twitter.com/petergcutler">Twitter</a>
-        </div>
-        <div class="contact-row">
-          <a
-            class="contact-link"
-            target="_blank"
-            href="https://linkedin.com/in/petergcutler/">LinkedIn</a>
-        </div>
-      </div>
+      <img class="self-image" src="../assets/images/about/self-image.jpg" alt="peter-cutler">
     </div>
 
     <div class="primary-content">
@@ -55,6 +28,14 @@
         </p>
       </div>
     </div>
+
+  </section>
+
+  <section class="about-contact-links">
+    <h2 class="contact-heading">Contact</h2>
+    <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
+    <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
   </section>
 
   <app-article-footer></app-article-footer>
