--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,12 +14,17 @@
       </li>
     </ul>
   </section>
-  <section class="contact-links">
-    <a class="nav-link email-link" href="mailto:petergcutler@gmail.com">
+  <section class="nav-contact-links">
+    <a target="_blank" href="mailto:petergcutler@gmail.com" class="fas fa-envelope"></a>
+    <a target="_blank" href="https://twitter.com/petergcutler" class="fab fa-twitter-square"></a>
+    <a target="_blank" href="https://linkedin.com/in/petergcutler/" class="fab fa-linkedin"></a>
+    <!-- <a class="nav-link" href="mailto:petergcutler@gmail.com">
       Email
-    </a>
+    </a> -->
   </section>
 </nav>
+
+<section class="mobile-border"></section>
 
 <main class="main-window">
   <router-outlet></router-outlet>
