--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,9 +1,9 @@
 .about-main {
-  padding-top: 2em;
   display: grid;
   grid-gap: 2em;
+  padding-top: 2em;
 
-  @include respond-to('mediumer') {
+  @include respond-to('medium') {
     grid-template-columns: 2fr 3fr;
   }
 }
@@ -24,34 +24,52 @@
   font-size: $smaller;
   font-weight: 400;
   text-transform: uppercase;
-  margin: 1.4em 0 1em 0;
+  margin: 1.4em 0 1.4em 0;
   letter-spacing: 0.2em;
   font-weight: bold;
 }
 
-.contact-row {
-  margin: 1em 0;
-}
+.about-contact-links {
+  margin-top: 2em;
 
-.contact-link {
-  font-family: $body-font;
-  text-decoration: none;
-  color: $dark-gray;
-  border-bottom: $border-thin solid $accent-red;
+  h2 {
+    display: block;
 
-  &:hover {
-    color: $accent-red;
-    border-bottom: $border-thin solid $accent-red;
+    @include respond-to($shift-nav-to-side) {
+      display: none;
+    }
+  }
+
+  a {
+    display: inline;
+    text-decoration: none;
+    font-size: 1.4rem;
+    padding-right: 1.2em;
+    margin-top: 2em;
+
+    @include respond-to($shift-nav-to-side) {
+      display: none;
+    }
+
+    &::before {
+      color: $silver;
+    }
+
+    &:hover::before {
+      color: $youthful-salmon;
+    }
   }
 }
 
-.bio {
-  p {
-    color: $dark-gray;
-    font-family: $body-font;
-    font-size: $larger;
-    line-height: 1.4em;
-    padding-bottom: 1em;
+.bio p {
+  color: $dark-gray;
+  font-family: $body-font;
+  font-size: $normal;
+  line-height: 1.6em;
+  padding-bottom: 1em;
+
+  @include respond-to('mediumer') {
+    font-size: $large;
   }
 }
 
